project base complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: "Poetsen";
+  src: local("Poetsen"),
+    url("../public/fonts/Poetsen_One/PoetsenOne-Regular.ttf") format("truetype");
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
